# oop_labs

./: .gitignore  CMakeLists.txt
lab_01/: CMakeLists.txt  main.cpp
lab_01/include/: check_brackets.h
lab_01/src/: check_brackets.cpp
lab_01/test/: tests01.cpp
lab_02/: CMakeLists.txt  main.cpp
lab_02/include/: eleven.h
lab_02/src/: eleven.cpp
lab_02/test/: tests02.cpp
lab_03/: CMakeLists.txt
lab_03/include/: container.h  figure.h  point.h  rectangle.h  rhombus.h  trapezoid.h
lab_03/src/: container.cpp  figure.cpp  main.cpp  rectangle.cpp  rhombus.cpp  trapezoid.cpp
lab_03/tests/: container.cpp  rectangle.cpp  rhombus.cpp  trapezoid.cpp
lab_04/: CMakeLists.txt
lab_04/include/: array.hpp  figure.hpp  point.hpp  rectangle.hpp  rhombus.hpp  trapezoid.hpp
lab_04/tests/: tests04.cpp
lab_05/: CMakeLists.txt  main.cpp
lab_05/include/: customMemoryResource.h  list.hpp
lab_05/tests/: tests05.cpp
lab_06/: CMakeLists.txt  main.cpp
lab_06/include/: Factory.h  Game.h  NPC.h  SlaveTrader.h
lab_06/src/: ConsoleObserver.cpp  Game.cpp  NPC.cpp  SlaveTrader.cpp  Squirrel.cpp
lab_06/tests/: test.cpp
lab_07/: CMakeLists.txt
lab_07/include/: ConsoleObserver.h  Factory.h  FileObserver.h  Game.h  Knight.h  NPC.h  Observer.h  SlaveTrader.h  Squirrel.h
lab_07/src/: Factory.cpp  FileObserver.cpp  Game.cpp  Knight.cpp  NPC.cpp
lab_07/tests/: test.cpp
